<resources>
    <string name="app_name">CustomView</string>
    <string name="bottom_sheet_dialog">Bottom Sheet Dialog</string>
    <string name="dialog_title">弹窗标题</string>
    <string name="float_view">Float View</string>
    <string name="drag_recycler_view">Drag Recycler View</string>
    <string name="delete">删除</string>
    <string name="snow">snow</string>
    <string name="image">image</string>
    <string name="demo">demo</string>
    <string name="demo2">demo2</string>
    <string name="progress">progress</string>
    <string name="seekbar">seekbar</string>
    <string name="flow_layout">flow layout</string>
    <string name="click_to_explosion">click to explosion</string>
    <string name="explosion">explosion</string>
    <string name="swipe">swipe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="switcher">switcher</string>
    <string name="dialog">Dialog</string>
    <string name="sin">sin</string>
    <string name="draw">draw</string>
    <string name="study">study</string>
</resources>