<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bottom_sheet_dialog"
        android:textStyle="bold"
        app:cornerRadius="20dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_float_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/float_view"
        android:textStyle="bold"
        app:cornerRadius="20dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_drag_rv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drag_recycler_view"
        android:textStyle="bold"
        app:cornerRadius="20dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_snow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snow"
        android:textStyle="bold"
        app:cornerRadius="20dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image"
        android:textStyle="bold"
        app:cornerRadius="20dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_demo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/demo"
        android:textStyle="bold"
        app:cornerRadius="20dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_demo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/demo2"
        android:textStyle="bold"
        app:cornerRadius="20dp" />

</LinearLayout>